# Clubhouse

./: .gitignore  Anchor.toml  clubhouse.json  deploy.sh  package-lock.json  package.json  transform-idl.ts  tsconfig.json
programs/clubhouse/: Cargo.toml
programs/clubhouse/src/: errors.rs  lib.rs
programs/clubhouse/src/instructions/: mod.rs
programs/clubhouse/src/instructions/campaign/: close_campaign.rs  create_campaign.rs  mod.rs
programs/clubhouse/src/instructions/game/: end.rs  mod.rs  start.rs
programs/clubhouse/src/instructions/house/: close.rs  create.rs  mod.rs  update.rs  withdraw.rs
programs/clubhouse/src/instructions/player/: claim_stake.rs  create_player.rs  mod.rs
programs/clubhouse/src/instructions/program_admin/: add.rs  mod.rs  remove.rs
programs/clubhouse/src/state/: accounts.rs  common.rs  mod.rs
tests/: clubhouse.ts
