[package]
name = "clubhouse"
version = "0.1.0"
description = "Solana Clubhouse is a program that does club things"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clubhouse"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = [
    "token",
    "metadata",
    "mpl-token-metadata",]}
mpl-core = {version = "0.8.1", features = ["anchor"]}
