[package]
name = "clubhouse"
version = "0.1.0"
description = "Solana Clubhouse is a program that does club things"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clubhouse"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "afcbaedac69d23544cad177acfbe10b325cf0a06" , features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "afcbaedac69d23544cad177acfbe10b325cf0a06" , features = [
    "token",
    "metadata",
    "mpl-token-metadata",]}
